<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="0"
        android:showAsAction="never"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_viewmap"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/menu_viewmap"/>
 <!-- <item
        android:id="@+id/menu_start"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/menu_start"/>
    <item
        android:id="@+id/menu_stop"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/menu_stop"/>
            
     <item
        android:id="@+id/menu_debug"
        android:orderInCategory="60"
        android:showAsAction="never"
        android:title="Debug"/>-->
     
     <item
        android:id="@+id/menu_settings"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>

</menu>