<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:layout_width = "wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/dialog_oldkey"/>
    <EditText 
        android:id="@+id/oldKey"
        android:inputType="text"
        android:password="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""/>
    <TextView 
        android:layout_width = "wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/dialog_newkey"/>
     <EditText 
        android:id="@+id/newKey"
        android:inputType="text"
        android:password="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""/>
     <LinearLayout 
    	android:layout_width="fill_parent"
   	 	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
    	android:gravity="center">
    <Button 
        android:id="@+id/dialog_button_ok"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"/>
    <Button 
        android:id="@+id/dialog_button_cancel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"/>
    </LinearLayout>

</LinearLayout>